apps/mobile/third_party/open_wake_word/lib/src/open_wake_word_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for open_wake_word
class OpenWakeWordBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenWakeWordBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenWakeWordBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int oww_init(
    ffi.Pointer<ffi.Char> mel_model_path,
    ffi.Pointer<ffi.Char> emb_model_path,
    ffi.Pointer<ffi.Char> ww_model_path,
  ) {
    return _oww_init(
      mel_model_path,
      emb_model_path,
      ww_model_path,
    );
  }

  late final _oww_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('oww_init');
  late final _oww_init = _oww_initPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void oww_process_audio(
    ffi.Pointer<ffi.Int16> audio_data,
    int length,
  ) {
    return _oww_process_audio(
      audio_data,
      length,
    );
  }

  late final _oww_process_audioPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Int16>, ffi.Int)>>('oww_process_audio');
  late final _oww_process_audio = _oww_process_audioPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int16>, int)>();

  double oww_get_probability() {
    return _oww_get_probability();
  }

  late final _oww_get_probabilityPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('oww_get_probability');
  late final _oww_get_probability =
      _oww_get_probabilityPtr.asFunction<double Function()>();

  bool oww_is_activated() {
    return _oww_is_activated();
  }

  late final _oww_is_activatedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('oww_is_activated');
  late final _oww_is_activated =
      _oww_is_activatedPtr.asFunction<bool Function()>();

  ffi.Pointer<ffi.Char> oww_get_last_error() {
    return _oww_get_last_error();
  }

  late final _oww_get_last_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function()>>('oww_get_last_error');
  late final _oww_get_last_error = _oww_get_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void oww_destroy() {
    return _oww_destroy();
  }

  late final _oww_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('oww_destroy');
  late final _oww_destroy = _oww_destroyPtr.asFunction<void Function()>();
}
